# agnosmodel2

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-README.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt
agnosmodel2/: __init__.py  agnosmodel2.py  plus.py
